<resources>
    <string name="app_name">MyApps</string>
    <string name="title_profil">Profil</string>
    <string name="title_kontak">Kontak</string>
    <string name="splash_name">Hello There</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_teman">Teman</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kelas">Kelas</string>
    <string name="email">Email</string>
    <string name="ig">Instagram</string>
    <string name="date">Date</string>
    <string name="nim">Nim</string>
    <string name="nama">Nama</string>
    <string name="submit">Submit</string>
    <string name="telepon">Telepon</string>
    <string name="delete">Delete</string>
    <string name="deskripsi">Mahasiswa semester 6 jurusan Teknik Informatika di Universitas Komputer Indonesia Kota Bandung</string>
    <string name="email_menu_kontak">alfan.wahyudi98@gmail.com</string>
    <string name="noTelepon">085284584219</string>
    <string name="instagram_name">alfan.id</string>
    <string name="fungsi">FUNGSI</string>
    <string name="fungsi_pertama">Menampilkan profil kontak dari developer</string>
</resources>
