<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_informasi">

    <fragment
        android:id="@+id/navigation_informasi"
        android:name="com.example.tugas_uts_akb_if3_10117118.ui.informasi.InformasiFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_informasi" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.tugas_uts_akb_if3_10117118.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/navigation_kontak"
        android:name="com.example.tugas_uts_akb_if3_10117118.ui.notifications.KontakFragment"
        android:label="@string/title_kontak"
        tools:layout="@layout/fragment_kontak" />
    <fragment
        android:id="@+id/navigation_teman"
        android:name="com.example.tugas_uts_akb_if3_10117118.ui.teman.TemanFragment"
        android:label="@string/title_teman"
        tools:layout="@layout/fragment_teman" />
</navigation>
